--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -18,5 +18,11 @@
     <Folder Include="Models\ViewModel\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Authentication.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
