--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <None Update="Authentication.yaml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
